# dotfiles_old

./: .chezmoiignore  config  dot_xprofile  dot_zshrc  pkglist.txt  private_dot_zsh_history
private_Dev/c/ncurses/: CMakeLists.txt  goodby.c
private_Dev/c/ncurses/dot_cache/clangd/index/: goodby.c.CDFE4259FFE5D796.idx
private_Dev/c/ncurses/private_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  executable_main
private_Dev/c/richie/: CMakeLists.txt  compile_commands.json  dot_gitignore  fahrenheit2.c  neovim.json
private_Dev/c/richie/dot_cache/clangd/index/: fahrenheit.c.C7BBB6A18EB4D2A4.idx  fahrenheit2.c.948F87ED82D292A5.idx  seg.c.1E34B7D1532A2468.idx
private_Dev/c/richie/dot_git/: COMMIT_EDITMSG  ORIG_HEAD  index
private_Dev/c/richie/dot_git/logs/: HEAD
private_Dev/c/richie/dot_git/objects/02/: readonly_f6a927f79358fe293b8d7d378fc2e217240719
private_Dev/c/richie/dot_git/refs/heads/: master
private_Dev/c/richie/private_build/private_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  executable_test
private_Dev/cpp/private_test_cpp/: CMakeLists.txt  compile_commands.json  dot_gitignore  executable_main.cpp  executable_test.cpp  executable_test.hpp  neovim.json
private_Dev/cpp/private_test_cpp/dot_git/: ORIG_HEAD  index
private_Dev/cpp/private_test_cpp/dot_git/logs/: HEAD
private_Dev/cpp/private_test_cpp/dot_git/refs/: stash
private_Dev/cpp/private_test_cpp/private_build/private_debug/: CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake  dot_ninja_deps  dot_ninja_log  executable_Testproject
(+752 files in other folders)
